fixing missing border-radius in Safari, small refactor and text update

--- a/components/molecules/jobDetailsCard/jobDetailsCard.module.scss
+++ b/components/molecules/jobDetailsCard/jobDetailsCard.module.scss
@@ -13,6 +13,7 @@
   .wrapper {
     width: 100%;
     height: 74px;
+    border-radius: 5px;
     position: absolute;
     left: 0;
     bottom: 0;
